--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ build-backend = "setuptools.build_meta"
 name = "mcsl2-api"
 version = "0.1.0"
 description = "Thread-safe, non-intrusive API layer for MCSL2 plugin developers"
+readme = "README.md"
+license = { text = "MIT" }
+authors = [{ name = "BHCN", email = "imbhcn@gmail.com" }]
 requires-python = ">=3.8"
 dependencies = ["PyQt5>=5.15"]
 
