--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ all = ["pydantic>=1.10,<3", "requests>=2.0"]
 [tool.setuptools]
 include-package-data = true
 
+[tool.setuptools.package-data]
+MCSL2_API = ["py.typed"]
+
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["MCSL2_API*"]
